--- a/tema1/notebook_muestra.ipynb
+++ b/tema1/notebook_muestra.ipynb
@@ -23,11 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido a este curso de Machine Learning\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Bienvenido a este curso de Machine Learning')"
+    "print('Bienvenido a este curso de Machine Learning') "
    ]
   },
   {
@@ -39,9 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mx\u001b[49m + \u001b[32m5\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "x + 5"
    ]
@@ -173,7 +193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
